# FastAPI-backend

./: .gitignore  README.MD  alembic.ini  docker-compose.yml  run_auth.sh  run_user.sh
alembic/: env.py
auth_service/: .dockerignore  .env-template  Dockerfile  alembic.ini  logger.py  main.py  pyproject.toml
auth_service/alembic/: env.py
auth_service/alembic/versions/: 2025_03_01_0036-61e8a42457e7_initial_migration.py  2025_03_02_0031-dd043930987d_add_autoincrement_to_user_id_and_drop_id.py  2025_05_10_1840-82b09d7ae139_added_table_revokedtoken.py
auth_service/api/: README.MD  __init__.py
auth_service/api/api_v1/: __init__.py  auth.py  cookies_auth.py  debug.py  jwt_auth.py  oauth.py  test.py  validation.py
auth_service/api/api_v1/utils/: helpers.py
auth_service/core/: config.py  redis_client.py  security.py
auth_service/core/models/: __init__.py  auth_user.py  base.py  db_helper.py  revoked_tokens.py
auth_service/core/schemas/: __init__.py  auth_user.py
auth_service/crud/: crud.py  tokens_crud.py  users_crud.py
user_service/: .env-template  Dockerfile  alembic.ini  main.py  pyproject.toml
user_service/alembic/: env.py
user_service/alembic/versions/: 2025_02_28_2134-9c3d1fb08bb1_initial_migration.py  2025_02_28_2139-d6d0a6161987_remove_is_active_column.py  2025_03_01_0025-b5a8aa43bbad_add_fields_user_id_and_is_active.py  2025_03_01_2216-d26f0f247edb_remove_user_id.py  2025_03_01_2305-0e0d35e121d3_add_is_active.py  2025_05_06_0102-084b9fe3a95a_changed_field_id_to_user_id.py
user_service/api/: __init__.py
user_service/api/api_v1/: __init__.py  test.py  users.py
user_service/api/api_v1/utils/: fake_db.py  send_email.py  send_welcome_email.py
user_service/core/: config.py
user_service/core/models/: __init__.py  base.py  db_helper.py  user.py
user_service/core/schemas/: user.py
user_service/crud/: crud.py
user_service/users/: crud.py  schemas.py  views.py
