[project]
name = "auth-service"
version = "0.1.0"
description = ""
authors = [
    {name = "pOsdas",email = "ratmir1099@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jwt (>=1.3.1,<2.0.0)",
    "bcrypt (>=4.2.1,<5.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
