[project]
name = "auth-service"
version = "0.1.0"
description = ""
authors = [
    {name = "pOsdas",email = "ratmir1099@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jwt (>=1.3.1,<2.0.0)",
    "bcrypt (>=4.2.1,<5.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

