[project]
name = "auth-service"
version = "0.1.0"
description = ""
authors = [
    {name = "pOsdas",email = "ratmir1099@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt (>=4.2.1,<5.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "authlib (>=1.4.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "starlette (>=0.46.0,<0.47.0)",
    "pyjwt (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

